--- a/.github/workflows/github_to_hf_spaces.yml
+++ b/.github/workflows/github_to_hf_spaces.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           fetch-depth: 0
           lfs: true
-      - name: Push to hub
+      - name: Push to HF spaces
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: git push --force https://AshutoshGole:$HF_TOKEN@huggingface.co/spaces/AshutoshGole/student_performance_app main
